--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,13 +46,27 @@
         app:layout_constraintStart_toEndOf="@+id/btnMap"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+
+    <ImageView
+        android:id="@+id/compassNeedleBackground"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="50dp"
+        android:contentDescription="Compass Needle Background"
+        app:srcCompat="@drawable/compass_icon_v2_direction"
+        app:layout_constraintTop_toBottomOf="@+id/btnMap"
+        app:layout_constraintBottom_toTopOf="@+id/degreeText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <ImageView
         android:id="@+id/compassNeedle"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="50dp"
         android:contentDescription="Compass Needle"
-        app:srcCompat="@drawable/compass"
+        app:srcCompat="@drawable/compass_icon_v2_arrow"
         app:layout_constraintTop_toBottomOf="@+id/btnMap"
         app:layout_constraintBottom_toTopOf="@+id/degreeText"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +77,7 @@
         android:id="@+id/degreeView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="125dp"
         app:layout_constraintTop_toBottomOf="@id/compassNeedle"
         android:gravity="center"
         android:textColor="#FFFFFF"
