--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -38,14 +38,12 @@
         android:id="@+id/receptionAlertText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
-        android:layout_marginEnd="112dp"
-        android:layout_marginBottom="445dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginBottom="444dp"
         android:text="Reception Alert"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -99,6 +97,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/alertStatText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="364dp"
+        android:layout_marginBottom="444dp"
+        android:textColor="#FFFFFF"
+        android:textSize="28sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Switch
         android:id="@+id/locationLogSwitch"
         android:layout_width="wrap_content"
@@ -111,5 +120,16 @@
         app:layout_constraintBottom_toTopOf="@+id/clearLocationLogText"
         app:layout_constraintStart_toEndOf="@+id/LocationLogText"
         app:layout_constraintTop_toBottomOf="@+id/receptionAlertText" />
+
+    <Switch
+        android:id="@+id/AlertSwitch2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="452dp"
+        android:thumbTint="@color/white"
+        android:trackTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/receptionAlertText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
