--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -20,104 +20,85 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/locationServiceText"
-        android:layout_width="wrap_content"
-        android:layout_height="38dp"
-        android:layout_marginHorizontal="5dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginBottom="63dp"
-        android:text="Set Location Service Intervals"
-        android:textColor="#FFFFFF"
-        android:textSize="28sp"
-        app:layout_constraintBottom_toTopOf="@+id/receptionAlertText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
         android:id="@+id/receptionAlertText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginBottom="444dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="232dp"
         android:text="Reception Alert"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/bookMarkFavorateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
-        android:layout_marginEnd="112dp"
-        android:layout_marginBottom="152dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="68dp"
+        android:clickable="true"
+        android:focusable="true"
         android:text="Book Mark Favorite"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
-        android:clickable="true"
-        android:focusable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/clearLocationLogText" />
 
     <TextView
         android:id="@+id/clearLocationLogText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginBottom="244dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="68dp"
         android:text="Clear Location Log"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LocationLogText" />
 
     <TextView
         android:id="@+id/LocationLogText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginBottom="344dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="68dp"
         android:text="Location log"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/receptionAlertText" />
 
     <TextView
         android:id="@+id/LogstatusText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="320dp"
-        android:layout_marginBottom="344dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="68dp"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/locationLogSwitch"
+        app:layout_constraintTop_toBottomOf="@+id/receptionAlertText" />
 
     <TextView
         android:id="@+id/alertStatText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="364dp"
-        android:layout_marginBottom="444dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="230dp"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/AlertSwitch2"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Switch
         android:id="@+id/locationLogSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="74dp"
-        android:layout_marginBottom="62dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="68dp"
         android:thumbTint="@color/white"
         android:trackTint="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/clearLocationLogText"
         app:layout_constraintStart_toEndOf="@+id/LocationLogText"
         app:layout_constraintTop_toBottomOf="@+id/receptionAlertText" />
 
@@ -126,10 +107,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginBottom="452dp"
+        android:layout_marginTop="234dp"
         android:thumbTint="@color/white"
         android:trackTint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/receptionAlertText" />
+        app:layout_constraintStart_toEndOf="@+id/receptionAlertText"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
